--- a/des157a/styles.css
+++ b/des157a/styles.css
@@ -1,3 +1,17 @@
+header {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-family: 'Roboto', sans-serif;
+}
+
+h2 {
+    font-family: 'Roboto', sans-serif;
+}
+
+
 ul {
     list-style-type: none;
+    font-family: 'Roboto', sans-serif;
 }
