--- a/des157a/styles.css
+++ b/des157a/styles.css
@@ -10,6 +10,13 @@ h2 {
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    max-width: 1200px;
+    min-width: 800px;
+    margin: auto;
+    background-color: #26294f;
+    color: #lavender;
+}
 
 ul {
     list-style-type: none;
