--- a/des157a/styles.css
+++ b/des157a/styles.css
@@ -29,7 +29,7 @@ body {
     max-width: 1100px;
     min-width: 800px;
     margin: auto;
-    background-color: azure;
+    background-color: rgb(255, 248, 255);
     color: #black;
     
 }
@@ -70,16 +70,16 @@ ul {
 
   #star1 {
     position: relative;
-    background-color:palevioletred;
+    background-image:radial-gradient(circle, blue, white, silver);
   left: 600px;
   top: 40px;
   transition:all 2.5s;
   }
 
   #star1:hover { 
-      background-image: radial-gradient(circle, rgb(17, 97, 218), white, palevioletred);
-      height: 100px;
-    width: 100px;
+      background-image: radial-gradient(circle, rgb(17, 97, 218), white, palevioletred, aquamarine);
+      height: 150px;
+    width: 150px;
       cursor:pointer;
 
 }
@@ -97,22 +97,22 @@ ul {
   #star2:hover { 
       cursor:pointer;
       background-image: radial-gradient(circle, purple, white, gold);
-      height: 100px;
-    width: 100px;
+      height: 125px;
+    width: 125px;
 }
 
   #star3 {
       position: relative;
     left: 25px;
     top: 25px;
-    background-image: radial-gradient(circle, purple, white, gold);
+    background-image: radial-gradient(circle, white, gold, violet);
     transition:all 2s;
   }
 
   #star3:hover { 
     height: 100px;
     width: 100px;
-    background-image: radial-gradient(circle, aquamarine, white, palevioletred);
+    background-image: radial-gradient(circle, rgb(68, 68, 134), white, darkred);
 }
       cursor:pointer;
 
