--- a/des157a/lj/styles.css
+++ b/des157a/lj/styles.css
@@ -1,8 +1,14 @@
+header {
+    text-align:left;
+    
+}
 h1 {
+    
     display:flex;
     justify-content: space-around;
     font-family: 'Koh Santepheap', cursive;
     font-size: 30px;
+    text-align:left;
 
 }
 
@@ -10,7 +16,8 @@ h2 {
     display:flex;
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
+    font-size: 20px;
+    text-align:left;
    
 }
 
@@ -25,18 +32,40 @@ body {
     min-width: 800px;
     margin: auto;
     background-color: rgb(255, 248, 255);
+    font-family: 'Roboto', sans-serif;
     color: #black;
+    
 }
 
-.bodytext {
-    max-width: 1100px;
-    min-width: 800px;
-    margin: auto;
-    background-color: rgb(255, 248, 255);
-    color: #black;
+img{
+    width:300px;
+}
+main {
+    display:flex;
+    justify-content: center;
+}
+
+section {
+    left:500px;
+}
+
+
+ul {
+    list-style-type: none;
+    font-family: 'Roboto', sans-serif;
 }
 
 .paragraph {
-    line-height 80%;
-    width: 80%
+    line-height: 150%;
+    width:50%
+}
+
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    position:relative;
+    width:500px;
+    font-family: 'Roboto', sans-serif;
+    margin:auto;
 }
