--- a/des157a/lj/styles.css
+++ b/des157a/lj/styles.css
@@ -54,7 +54,9 @@ ul {
 }
 
 img {
-    justify-content: center;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .paragraph {
     line-height: 150%;
